Fix main screen when B element is not visible

--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -44,7 +44,6 @@
 .open-post:last-child {
   border-top: var(--main-border);
   color: var(--darkergray);
-  margin-bottom: 60px;
 }
 
 /* open-post__column 1 */
