--- a/css/styles.css
+++ b/css/styles.css
@@ -31,4 +31,5 @@ body {
 
 .main-screen {
   padding: 0px var(--horizontal-space);
+  margin-bottom: 72px;
 }
